[package]
name = "astrid-capsule-agents"
version = "0.1.0"
edition = "2024"
description = "Injects project instructions from AGENTS.md into the system prompt"
license = "MIT OR Apache-2.0"
authors = ["Astrid Core Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { version = "0.5.0", features = ["derive"] }
extism-pdk = "1.4.1"
serde = "1.0"
serde_json = "1.0"
